--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {},
   "author": "",
   "license": "ISC",
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://127.0.0.1:5000/"
 }
